--- a/project-01/src/sass/components/form-registration.scss
+++ b/project-01/src/sass/components/form-registration.scss
@@ -2,38 +2,26 @@
   width: 280px;
   border: 2px solid $first-white-color;
   @include font-height($third-text-size, 2.325);
-  // font-size: 13px;
-  // line-height: 2.325;
   color: $first-white-color;
   background-color: transparent;
   padding: 8px 5px 10px 18px;
 
   &::-webkit-input-placeholder {
     @include font-height($third-text-size, 2.325);
-    // font-size: 13px;
-    // line-height: 2.325;
     @include font-family-settings($font-family-monts, $font-weight-bold, $first-white-color);
-    // font-family: "Montserrat";
-    // font-weight: bold;
-    // color: $first-white-color;
   }
 
   @include tablet {
     min-width: 400px;
-    // flex: 1 1 400px;}
 
     @include desktop {
       width: 620px;
       border: 1px solid $first-white-color;
       @include font-height($twenty-one-text-size, 1.8);
-      // font-size: 21px;
-      // line-height: 1.8;
       padding: 16px 5px 16px 26px;
 
       &::-webkit-input-placeholder {
         @include font-height($twenty-one-text-size, 1.8);
-        // font-size: 21px;
-        // line-height: 1.8;
       }
     }
 
@@ -45,12 +33,12 @@
 
 .section-form__form input[name='name']:valid,
 .section-form__form input[type='tel']:valid {
-  outline: 2px solid #09ab09;
+  outline: 2px solid $first-green-color;
   outline-offset: -2px;
 }
 
 .section-form__form input[type='text']:invalid,
 .section-form__form input[type='tel']:invalid {
-  outline: 2px solid #ff0000;
+  outline: 2px solid $first-red-color;
   outline-offset: -2px;
 }
