--- a/project-01/src/sass/components/graduate-card.scss
+++ b/project-01/src/sass/components/graduate-card.scss
@@ -3,7 +3,6 @@
 
   @include tablet {
     max-width: 492px;
-    // @include width-percent(492px, 1210px);
     padding: 0px;
     text-align: left;
     margin-bottom: 42px;
@@ -12,52 +11,34 @@
   @include desktop {
     max-width: 714px;
     margin-bottom: 42px;
-    //   padding: 0px 28px;}
   }
 }
 
 .graduate-card__title {
   @include font-settings($third-text-size, 2.144, 1.1px);
-  // font-size: 13px;
-  // color: #ff6b08;
-  // line-height: 2.144;
-  // letter-spacing: 1.1px;
   margin: 0px;
 
   @include tablet {
     @include font-height($eigth-text-size, 1.62);
-    // font-size: 18px;
-    // line-height: 1.62;
-    // letter-spacing: 1.1px;
     margin: 0px 0px 12px;
   }
   
   @include desktop {
     @include font-height($twenty-five-text-size, 1.167);
-    // font-size: 25px;
-    // line-height: 1.167;
     margin: 0px 0px 10px;
   }
 }
 
 .graduate-card__description {
   @include font-settings($first-text-size, 1.515, 0.7px);
-  // font-size: 11px;
-  // color: #858585;
-  // line-height: 1.515;
-  // letter-spacing: 0.7px;
   margin: 0px 0px 14px;
 
   @include tablet {
     @include font-height(12.5px, 1.333);
-    // font-size: 12.5px;
-    // line-height: 1.333;
     margin: 0px 0px 18px;
   }
 
   @include desktop {
-    // font-size: 12.5px;
-    // line-height: 1.333;
     margin: 0px 0px 18px;
     padding-right: 276px;
   }
@@ -65,15 +46,11 @@
 
 .graduate-card__text {
   @include font-settings($first-text-size, 1.818, 0.6px);
-  // font-size: 11px;
-  // line-height: 1.818;
-  // letter-spacing: 0.6px;
-  // color: #18191d;
   padding: 0px 2px;
   margin: 0px;
 
   &--colortext {
-    color: #ff6b08;
+    color: $first-orange-color;
   }
 
   &--narrow {
@@ -86,8 +63,6 @@
 
   @include tablet {
     @include line-letter(1.9, 0.7px);
-    // line-height: 1.9;
-    // letter-spacing: 0.7px;
     padding-right: 10px;
 
     &--narrow {
@@ -101,14 +76,11 @@
 
   @include desktop {
     @include font-settings(16.667px, 1.75, 0.7px);
-    // font-size: 16.667px;
-    // line-height: 1.75;
-    // letter-spacing: 0.7px;
     padding: 0px 20px 0px 0px;
   }
 }
 
 .graduate-card__link:hover,
 .graduate-card__link:focus {
-  text-shadow: 0px 0px 8px #ff6b08;
+  text-shadow: 0px 0px 8px $first-orange-color;
 }
