--- a/project-01/src/sass/components/logo.scss
+++ b/project-01/src/sass/components/logo.scss
@@ -1,16 +1,17 @@
 .logo {
   display: inline-block;
-  min-width: 78px;
-  min-height: 30px;
+  max-width: 78px;
+  max-height: 30px;
   @extend %link;
 
   &:hover,
   &:focus {
-    box-shadow: 2px 2px 10px 2px #ff6b08;
+    box-shadow: 2px 2px 10px 2px $first-orange-color;
   }
 
   @include tablet {
-    max-width: 122px;
+    max-width: 121px;
+    max-height: 48px;
     margin-bottom: 6px;
   }
 }
