--- a/project-01/src/sass/helpers/placeholders.scss
+++ b/project-01/src/sass/helpers/placeholders.scss
@@ -1,5 +1,5 @@
 %button {
-  border: 2px solid #ff6b08;
+  border: 2px solid $first-orange-color;
   margin: 0px;
   padding: 0px;
   text-transform: uppercase;
