--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -27,7 +27,7 @@
     &:focus {
       color: $first-white-color;
       background-color: $first-orange-color;
-      border: 2px solid #ffffff;
+      border: 2px solid $first-white-color;
     }
 
     &--longer {
