--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -4,24 +4,24 @@
 }
 
 .header__wrapper {
-  @include bgr-image('../../images/bgr-01.png', contain, no-repeat);
+  @include bgr-image('../images/bgr-01.png', contain, no-repeat);
   margin-bottom: 52px;
   padding: 26px 20px 0px;
 
   @include tablet {
-    @include bgr-image('../../images/bgr-tablet.png', contain, no-repeat);
+    @include bgr-image('../images/bgr-tablet.png', contain, no-repeat);
     margin-bottom: 54px;
     padding: 32px 40px 0px;
   }
 
   @include desktop {
-    @include bgr-image('../../images/bgr-desk.png', contain, no-repeat);
+    @include bgr-image('../images/bgr-desk.png', contain, no-repeat);
     margin-bottom: 86px;
     padding: 38px 0px 0px;
   }
 
   @include desktop-wide {
-    @include bgr-image('../../images/bgr-desk-larg.png', contain, no-repeat);
+    @include bgr-image('../images/bgr-desk-larg.png', contain, no-repeat);
     padding: 28px 50px 0px 184px;
     margin-bottom: 126px;
   }
