--- a/project-01/src/sass/components/list-program.scss
+++ b/project-01/src/sass/components/list-program.scss
@@ -328,7 +328,7 @@
   }
 
   @include desktop {
-    @include font-height(18.75px, 1.556);
+    @include font-height($custom-third-text-size, 1.556);
     padding: 0px;
     margin: 0px;
 
