--- a/project-01/src/sass/components/header-training.scss
+++ b/project-01/src/sass/components/header-training.scss
@@ -51,7 +51,7 @@
   }
 
   @include desktop-wide {
-    @include font-settings(58.333px, 1.34, 1.4px);
+    @include font-settings($custom-fifth-text-size, 1.34, 1.4px);
     margin-bottom: 24px;
   }
 }
