--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -26,20 +26,20 @@
     width: 100%;
     height: 328px;
     padding: 56px 40px 0px 40px;
-    @include bgr-image('../../images/bgr-fire.png', contain, no-repeat);
+    @include bgr-image('../images/bgr-fire.png', contain, no-repeat);
     background-position: 0 0;
   }
 
   @include desktop {
     min-height: 526px;
     padding: 68px 35px 0px;
-    background-image: url(../../images/bgr-fire-desk.png);
+    background-image: url(../images/bgr-fire-desk.png);
   }
 
   @include desktop-wide {
     min-height: 560px;
     padding: 106px 156px 0px 186px;
-    background-image: url(../../images/bgr-fire-desk-larg.png);
+    background-image: url(../images/bgr-fire-desk-larg.png);
   }
 }
 
