--- a/project-01/src/sass/components/form-registration.scss
+++ b/project-01/src/sass/components/form-registration.scss
@@ -37,8 +37,8 @@
   outline-offset: -2px;
 }
 
-.section-form__form input[type='text']:invalid,
-.section-form__form input[type='tel']:invalid {
-  outline: 2px solid $first-red-color;
-  outline-offset: -2px;
-}
+// .section-form__form input[type='text']:invalid,
+// .section-form__form input[type='tel']:invalid {
+//   outline: 2px solid $first-red-color;
+//   outline-offset: -2px;
+// }
