--- a/project-01/src/sass/components/list-program.scss
+++ b/project-01/src/sass/components/list-program.scss
@@ -24,7 +24,7 @@
 .list-program__item {
   @extend %link;
   position: relative;
-  padding-left: 30px;
+  padding-left: 26px;
 
   &::before {
     @include pseudo($display: block);
@@ -50,7 +50,7 @@
     }
   }
 
-  &:nth-last-of-type(-3n+1) {
+  &:nth-last-of-type(-3n + 1) {
     border-left: 2px solid $first-lightdark-color;
 
     &::after {
@@ -68,7 +68,7 @@
   }
 
   &:not(:last-child) {
-    padding-bottom: 26px;
+    padding-bottom: 29px;
   }
 
   &:nth-of-type(3) {
@@ -78,8 +78,8 @@
   @include tablet {
     padding: 0px 0px 0px 50px;
 
-    &:not(:nth-last-of-type(-2n+1)) {
-      padding-bottom: 24px;
+    &:not(:nth-last-of-type(-2n + 1)) {
+      padding-bottom: 26px;
     }
 
     &:nth-of-type(3) {
@@ -95,7 +95,7 @@
       }
     }
 
-    &:nth-last-of-type(-3n+1) {
+    &:nth-last-of-type(-3n + 1) {
       border-left: 2px solid $first-lightdark-color;
 
       &::after {
@@ -113,7 +113,7 @@
     &::before {
       width: 16px;
       height: 16px;
-      top: -40px;
+      top: -42px;
       left: 0px;
     }
 
@@ -127,7 +127,7 @@
       }
     }
 
-    &:nth-last-of-type(-3n+1) {
+    &:nth-last-of-type(-3n + 1) {
       border-left: none;
 
       &::after {
@@ -152,7 +152,7 @@
       padding-top: 0px;
     }
 
-    &:not(:nth-last-of-type(-2n+1)) {
+    &:not(:nth-last-of-type(-2n + 1)) {
       padding-bottom: 0px;
     }
   }
@@ -197,7 +197,11 @@
   &::before {
     content: counter(count-program);
     @include font-height($fifth-text-size, 1.944);
-    @include font-family-settings($font-family-monts, $font-weight-bold, $first-white-color);
+    @include font-family-settings(
+      $font-family-monts,
+      $font-weight-bold,
+      $first-white-color
+    );
     text-transform: uppercase;
     margin-right: 8px;
   }
@@ -208,7 +212,7 @@
 
   @include desktop {
     @include font-settings($ninth-text-size, 1.535, 1.3px);
-    margin: 0px 0px 30px;
+    margin: 0px 0px 30px 0px;
 
     &::before {
       content: counter(count-program);
@@ -243,14 +247,14 @@
 .list-program__content {
   @extend %link;
 
-  &:not(:nth-last-of-type(-2n+1)) {
+  &:not(:nth-last-of-type(-2n + 1)) {
     margin: 0px 0px 4px;
   }
 
   @include tablet {
     min-width: 158px;
 
-    &:not(:nth-last-of-type(-2n+1)) {
+    &:not(:nth-last-of-type(-2n + 1)) {
       margin: 0px 22px 0px 0px;
     }
   }
@@ -258,13 +262,13 @@
   @include desktop {
     width: 100%;
 
-    &:not(:nth-last-of-type(-2n+1)) {
+    &:not(:nth-last-of-type(-2n + 1)) {
       margin: 0px 0px 24px 0px;
     }
   }
 
   @include desktop-wide {
-    &:not(:nth-last-of-type(-2n+1)) {
+    &:not(:nth-last-of-type(-2n + 1)) {
       margin: 0px 0px 22px 0px;
     }
   }
@@ -274,7 +278,7 @@
   display: block;
   @include font-settings($third-text-size, 2.244, 1.15px);
   position: relative;
-  margin: 0px 0px 11px 38px;
+  margin: 0px 0px 10px 38px;
 
   &::before {
     @include pseudo($display: block);
@@ -295,7 +299,7 @@
 
   @include desktop {
     @include font-height($eigth-text-size, 1.62);
-    margin: 0px 0px 10px 38px;
+    margin: 0px 0px 6px 38px;
   }
 
   @include desktop-wide {
@@ -313,10 +317,9 @@
   color: $first-grey-opacity-color;
   padding: 0px;
   margin: 0px;
-  white-space: pre-line;
 
   &--locaton {
-    display: none;
+    display: block;
   }
 
   @include tablet {
@@ -337,6 +340,10 @@
     }
 
     &--location {
+      display: block;
+    }
+
+    &--word {
       display: none;
     }
   }
