--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -34,5 +34,5 @@
 @import 'components/section-form';
 @import 'components/form-registration';
 @import 'components/footer';
-@import 'components/footer-form';
+@import 'components/footer-phone';
 @import 'components/copyright';
